backend/build_error.log
    Checking mylms-backend v0.1.0 (C:\Users\luke\mylms-rewrite\backend)
error[E0425]: cannot find function `convert` in crate `tex2typst_rs`
   --> src\content\typst.rs:103:25
    |
103 |     match tex2typst_rs::convert(latex) {
    |                         ^^^^^^^ not found in `tex2typst_rs`

warning: unused imports: `HeaderMap` and `extract::State`
 --> src\routes\export.rs:4:5
  |
4 |     extract::State,
  |     ^^^^^^^^^^^^^^
5 |     http::{header, HeaderMap, StatusCode},
  |                    ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `HeaderValue`
  --> src\main.rs:19:32
   |
19 |     http::{Method, HeaderName, HeaderValue},
   |                                ^^^^^^^^^^^

warning: unused variable: `client`
   --> src\routes\content.rs:283:9
    |
283 |     let client = MoodleClient::new(&config);
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_client`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `mylms-backend` (bin "mylms-backend") generated 3 warnings
error: could not compile `mylms-backend` (bin "mylms-backend") due to 1 previous error; 3 warnings emitted
